--- a/index.html
+++ b/index.html
@@ -4,9 +4,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">   
     <title>Personal Website</title>
 </head>
 <body>
-    
+    <section class="first-section">
+        <div class="half-width">
+            <div class="text-center">
+                <h2>Hello I'm</h2>
+                <h1 class="name-light"> Farhan Osman</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, explicabo. Enim fugiat aperiam dolorum molestias distinctio vel placeat, deleniti iste?</p> <br>
+                <a class="anchor" target="_blank" href="https://www.youtube.com">HIRE ME</a>
+            </div>
+        </div>
+        <div class="half-width">
+            <img class="img-intro" src="images/peter.png" alt="">
+        </div>
+    </section>
+
+    <section class="second-section">
+        <div class="half-width">
+            <img class="img-bio" src="images/peter_dream.png" alt="">
+        </div>
+        <div class="half-width">
+            <div class="text-center-bio">
+            <h2>Biography</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate repellendus unde vitae. Quam sunt voluptatum vel, blanditiis aut quaerat consequuntur in! Sint optio nobis a. Voluptate sequi harum iste numquam.</p><br>
+            <a class="anchor" target="_blank" href="https://www.youtube.com">DOWNLOAD CV</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="third-section">
+        <div>
+            <h2 id="work-header">My Latest Work</h2>
+        </div>
+        <div class="one-third-width">
+            <img class="img-work" src="images/latest-work/work-1.png" alt="">
+        </div>
+        <div class="one-third-width">
+            <img class="img-work" src="images/latest-work/work-2.jpg" alt="">
+        </div>
+        <div class="one-third-width">
+            <img class="img-work" src="images/latest-work/work-3.jpg" alt="">
+        </div>
+    </section>
+
+    <section class="fourth-section">
+        <div class="text-fourth-section">
+        <h3>What Clients are say</h3>
+        <h4>Bruce Moccy</h4>
+        <h6>Founder and CEO Alies</h6>
+        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolores laudantium dolore cumque cum aut fugit ea. Inventore, aspernatur reiciendis?"</p>
+        </div>
+        
+        <div class="contact">
+            <h4>Leave me a message in the</h4>
+            <h2>farhanitnstu@gmail.com</h2>
+        </div>
+    </section> <br><br>
+
+    <footer>
+        <p>
+            © Farhan 2021 , all rights researved. 
+        </p>
+    </footer> <br> 
 </body>
 </html>
